tests/test_grammar_parser/Grammar.txt
<Alphabet_Upper> ="A"/"B"/"C"/"D"/"E"/"F"/"G"/"H"/"I"/"J"/"K"/"L"/"M"/"N"/"O"/"P"/"Q"/"R"/"S"/"T"/"U"/"V"/"W"/"X"/"Y"/"Z";
<Alphabet_Lower> ="a"/"b"/"c"/"d"/"e"/"f"/"g"/"h"/"i"/"j"/"k"/"l"/"m"/"n"/"o"/"p"/"q"/"r"/"s"/"t"/"u"/"v"/"w"/"x"/"y"/"z";
<Num> = "0"/"1"/"2"/"3"/"4"/"5"/"6"/"7"/"8"/"9";
<Specials> = "+"/"*"/"-"/"&"/"!"/"?"/"<"/">"/"""/"("/")"/"_"/","/"/"/";"/"="/"\"/"#"/":"/"|"/"."/"{"/"}"/"["/"]";
<Spaces> = "\n"/"\t"/"\r"/" ";
<ASCII> = <Alphabet_Lower>/<Alphabet_Upper>/<Num>/<Spaces>/<Specials>;
<Apostrophe> = """;
<Left_Angle_Bracket> = "<";
<Right_Angle_Bracket> = ">";
<Left_Bracket> = "(";
<Right_Bracket> = ")";
<Assignment> = "=";
<End_Rule> = ";";
<Ampersand> = "&";
<Exclamation_Mark> = "!";
<Plus> = "+";
<Star> = "*";
<Question_Mark> = "?";
<Comma> = ",";
<Backslash> = "/";


<Var_Name> =<Left_Angle_Bracket>,(<Alphabet_Lower>/<Alphabet_Upper>),(<Alphabet_Lower>/<Alphabet_Upper>/"_")*,<Right_Angle_Bracket>;
<Subexpression> = <Left_Bracket>,<RHS>,<Right_Bracket>;
<Terminal> =(<Apostrophe>,<ASCII>,<Apostrophe>)/(<Apostrophe>,"\",("n"/"r"/"t"),<Apostrophe>);
<Nucleus> = (<Subexpression>/<Terminal>/<Var_Name>), <Whitespace>;
<Atom> = (<And_Predicate>/<Not_Predicate>/<One_Or_More>/<Zero_Or_More>/<Optional>/<Nucleus>), <Whitespace>;

<And_Predicate> = <Ampersand>, <Nucleus>;
<Not_Predicate> = <Exclamation_Mark>, <Nucleus>;
<Sequence> = <Atom>, <Whitespace>, <Comma>, <Whitespace>, <Atom>, (<Comma>, <Whitespace>, <Atom>)*;
<Ordered_Choice> = <Atom>, <Whitespace>,<Backslash>, <Whitespace>,<Atom>, (<Backslash>, <Whitespace>, <Atom>)*;
<One_Or_More> = <Nucleus>, <Whitespace>, <Plus>;
<Zero_Or_More> = <Nucleus>, <Whitespace>, <Star>;
<Optional> = <Nucleus>, <Whitespace>, <Question_Mark>;

<Whitespace> = (" "/"\n")*;
<RHS> = <Sequence>/<Ordered_Choice>/<Atom>;
<LHS> = <Var_Name>;
<Rule> = <LHS>, <Whitespace>, <Assignment>, <Whitespace>, <RHS>, <Whitespace>, <End_Rule>, <Whitespace>;
<Grammar> = <Rule>+, <Whitespace>;
